src/test/ui/malformed/malformed-plugin-1.stderr
error: attribute must be of the form `#[plugin(name|name(args))]`
  --> $DIR/malformed-plugin-1.rs:2:1
   |
LL | #![plugin]
   | ^^^^^^^^^^

error: aborting due to previous error

